--- a/packaging/iopath/meta.yaml
+++ b/packaging/iopath/meta.yaml
@@ -24,7 +24,7 @@ requirements:
 
 build:
   string: py{{py}}
-  script: BUILD_NIGHTLY=1 python setup.py install --single-version-externally-managed --record=record.txt # [not win]
+  script: BUILD_NIGHTLY=1 ${PYTHON} setup.py install --single-version-externally-managed --record=record.txt # [not win]
 
 about:
   home: https://github.com/facebookresearch/iopath
